ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 7.1.0-rc0, 7.0.1
    • Affects Version/s: None
    • Component/s: None
    • Service Arch
    • Fully Compatible
    • ALL
    • v7.0
    • Hide

      get arm64 machine (graviton workstation will allow for icecream)
      python buildscripts/scons.py --variables-files=etc/scons/mongodbtoolchain_v4_gcc.vars --link-model=dynamic --ninja ICECC=icecc --dbg=on --opt=off
      ninja +stacktrace_test

      Show
      get arm64 machine (graviton workstation will allow for icecream) python buildscripts/scons.py --variables-files=etc/scons/mongodbtoolchain_v4_gcc.vars --link-model=dynamic --ninja ICECC=icecc --dbg=on --opt=off ninja +stacktrace_test
    • Security 2023-07-10, Service Arch 2023-06-12
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      This test seems to fail on arm64 when debug is on, however disabling libunwind causes the test to pass. This is probably an issue with libunwind on that platform.

      The stacks with libunwind show general libunwind errors so the libunwind should be debugged and determined why its failing to generate stacks in the config.

       

      Part of this ticket should revert SERVER-78304

            Assignee:
            Mark Benvenuto
            Reporter:
            Daniel Moody
            Votes:
            1 Vote for this issue
            Watchers:
            16 Start watching this issue

              Created:
              Updated:
              Resolved: