SERVER-75120 Capture and walk stack in same frame

(cherry picked from commit 8bee9c79d9222d1a0f9106376797da32b5365878)